tests/ui/traits/const-traits/std-impl-gate.stock.stderr
error[E0658]: cannot call conditionally-const associated function `<Vec<usize> as Default>::default` in constant functions
  --> $DIR/std-impl-gate.rs:13:5
   |
LL |     Default::default()
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `Default` is not yet stable as a const trait
  --> $DIR/std-impl-gate.rs:13:5
   |
LL |     Default::default()
   |     ^^^^^^^^^^^^^^^^^^
   |
help: add `#![feature(const_default)]` to the crate attributes to enable
   |
LL + #![feature(const_default)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
